# microservice-template

./: pyproject.toml
src/microservice_template/: console.py
