[tool.poetry]
name = "microservice-template"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["hannadavis <hdavis@redzone.co>"]
readme = "README.md"
packages = [{include = "microservice_template"}]
homepage = "https://github.com/oxalisviolacea/microservice_template"
repository = "https://github.com/oxalisviolacea/microservice_template"
keywords = ["hypermodern", "template"]


[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
